deploy/platform/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tap-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
